# StellarStream

./: PR_DESCRIPTION_AFFILIATE_PORTAL.md
backend/: .env.example  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: event-watcher.ts  index.ts
backend/src/api/: index.ts
backend/src/services/: index.ts
contracts/Contract-V2/: Cargo.toml
contracts/Contract-V2/src/: errors.rs  lib.rs  math.rs  storage.rs  test.rs  types.rs
contracts/Contract-V2/test_snapshots/reentrancy/: invariant_cannot_migrate_same_stream_twice.1.json
contracts/Contract-V2/test_snapshots/test/: test_bump_active_streams_ttl_returns_count_of_existing.1.json  test_create_batch_streams_success.1.json  test_geometric_rate_unlock_math.1.json  test_get_active_volume_after_partial_withdrawal.1.json  test_get_active_volume_excludes_cancelled_streams.1.json  test_get_active_volume_mixed_roles.1.json  test_get_active_volume_multiple_streams.1.json  test_get_active_volume_single_stream_as_receiver.1.json  test_get_active_volume_unrelated_user_returns_zero.1.json  test_get_v2_protocol_health_updates_correctly.1.json  test_migrate_stream_creates_v2_stream.1.json  test_migrate_stream_remaining_balance_correct_at_25_percent.1.json  test_rebalance_after_clawback.1.json  test_v2_cancel_splits_funds.1.json  test_yield_bearing_stream.1.json
contracts/splitter-v3/src/: errors.rs  lib.rs  storage.rs  test.rs
frontend/components/: soroban-error-modal.tsx
frontend/components/dashboard/: sidebar.tsx
frontend/lib/: csv-template.test.ts  use-error-decoder.ts
(+5 files in other folders)
